# ecstasy-cpp

./: .clang-format  .dev.sh  .gitignore  CMakeLists.txt  CMakePresets.json  EditorController.cpp  README.md  dev.bat  dev.sh  ecstasy.code-workspace  ecstasy.cpp  release.sh  sandbox.hpp  simple_mat.mat  test.txt
cmake/: dll_utils.cmake  download_file.cmake
ecstasy/: CMakeLists.txt  ecstasy.hpp
ecstasy/include/: ecstasy.hpp
ecstasy/include/ecstasy/: EditorController.hpp  InputController.hpp  component.hpp  ecstasy.hpp  fd.h  geometry.hpp  material.hpp  mesh.hpp  scene.hpp  shader.hpp  texture.hpp
ecstasy/shader/: basic.wgsl
ecstasy/src/: CMakeLists.txt  InputController.cpp  ecstasy.cpp  shader.cpp  webgpu_adapter.hpp  webgpu_device.hpp
ecstasy/src/audio/: CMakeLists.txt  audio.cpp
ecstasy/src/camera/controller/: EditorController.cpp
ecstasy/src/common/: common.hpp  filament.hpp  glfw.hpp  imgui.hpp  logger.hpp  timer.hpp  utils.hpp  webgpu_compat.h
ecstasy/src/controller/: EditorController.cpp  EditorController.hpp  InputController.cpp  InputController.hpp
ecstasy/src/geometry/: Box.cpp  Box.hpp  Geometry.cpp  Geomtry.hpp  Plane.cpp  Plane.hpp  Transformable.hpp  box.cpp  box.hpp  plane.cpp  plane.hpp
ecstasy/src/manager/: RendererResourceManager.cpp  RendererResourceManager.hpp
ecstasy/src/material/: Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp
ecstasy/src/renderer/: CMakeLists.txt  renderer.cpp
ecstasy/src/scene/: sandbox.hpp  scene.cpp  scene.hpp
ecstasy/src/shader/: simple.hpp
ecstasy/src/skybox/: skybox.hpp
libs/sandbox/: CMakeLists.txt  main.cpp
sample/: CMakeLists.txt
sample/clear_color/: CMakeLists.txt  main.cpp
sample/particle/: CMakeLists.txt
sample/sandbox/: CMakeLists.txt
sample/triangle/: CMakeLists.txt  main.cpp
